# agent-lifecycle-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/actions/run-tests/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/scripts/: verify_upstream.sh
.github/workflows/: cd.yml  check-code.yml  ci-docs.yml  ci.yml  generate-docs.yml  pr.yml  publish-pypi.yml  publish-testpypi.yml  testpypi-release.yml
altk/core/: toolkit.py  utils.py
altk/core/llm/: README.md  base.py  output_parser.py  types.py
altk/core/llm_examples/: azure_openai_example.py  ibm_watsonx_ai_example.py  litellm_ollama_example.py  litellm_watsonx_example.py
altk/policy_guard_toolkit/: README.md
altk/policy_guard_toolkit/core/: toolkit.py
altk/policy_guard_toolkit/detect/: __init__.py  detect_prompts.py  detector.py  task_judge.py
altk/policy_guard_toolkit/examples/: run_altk_pipeline.py  sample_responses-llama-policies-10.jsonl
altk/policy_guard_toolkit/repair/: __init__.py  repair_prompts.py  repairer.py
altk/post_tool/: README.md
altk/post_tool/code_generation/: README.md  code_generation.py
altk/post_tool/core/: toolkit.py
altk/post_tool/rag_repair/: README.md  rag_repair.py  rag_repair_config.py
altk/post_tool/silent_review/: README.md  review_tool_output.py  silent_review.py
altk/post_tool_reflection_toolkit/code_generation/: README.md  code_generation.py
altk/post_tool_reflection_toolkit/core/: prompts.py  toolkit.py
altk/post_tool_reflection_toolkit/examples/: codegen_getting_started.ipynb
altk/post_tool_reflection_toolkit/rag_repair/: README.md  prompts.py  rag_repair.py  rag_repair_config.py  retrievers.py
altk/post_tool_reflection_toolkit/silent_review/: README.md  review_prompts.py  review_tool_output.py  silent_review.py
altk/pre_llm/core/: config.py
altk/pre_llm/spotlight/: README.md  spotlight.py
altk/pre_response/policy_guard/: README.md
altk/pre_tool/: README.md
altk/pre_tool/core/: __init__.py  config.py  types.py
altk/pre_tool/examples/: custom_config_example.py  semantic_issues_example.py  static_issues_example.py  tool_guard_example.py  units_conversion_error_example.py
altk/pre_tool/pre_tool_guard/: README.md  pre_tool_guard.py
altk/pre_tool/refraction/: README.md  refraction.py
altk/pre_tool/sparc/: README.md  sparc.py
altk/pre_tool_guard_toolkit/: README.md
altk/pre_tool_guard_toolkit/core/: __init__.py  types.py
altk/pre_tool_guard_toolkit/examples/: tool_guard_example.py
altk/pre_tool_guard_toolkit/pre_tool_guard/: __init__.py  pre_tool_guard.py
altk/pre_tool_reflection_toolkit/core/: __init__.py  config.py  types.py
altk/pre_tool_reflection_toolkit/examples/: custom_config_example.py  semantic_issues_example.py  static_issues_example.py  units_conversion_error_example.py
altk/pre_tool_reflection_toolkit/refraction/: README.md  refraction.py
altk/pre_tool_reflection_toolkit/sparc/: README.md  __init__.py  sparc.py
altk/spotlight_toolkit/: README.md
altk/spotlight_toolkit/core/: config.py
altk/spotlight_toolkit/spotlight/: spotlight.py
altk/toolkit_core/core/: toolkit.py
altk/toolkit_core/llm/: README.md  __init__.py  base.py
altk/toolkit_core/llm_examples/: azure_openai_example.py  ibm_watsonx_ai_example.py  litellm_ollama_example.py  litellm_watsonx_example.py
docs/: code-generation-middleware.md  examples.md  getting_started.md  index.md  integrations.md  policy-guard-middleware.md  post-tool-reflection-middleware.md  pre-tool-guard-middleware.md  pre-tool-reflection-middleware.md  rag-repair-middleware.md  refraction-middleware.md  silent-error-review-middleware.md  sparc-middleware.md  spotlight-middleware.md
docs/components/: altk-components-summary.md  json-processor.md  lifecycle.md  policy-guard.md  rag-repair.md  refraction.md  silent-review.md  sparc.md  spotlight.md
docs/components/refraction/: 00.-Refraction-Home.md  01.-Refraction-Examples.md  02.-The-Refraction-API-|-Inputs-and-Outputs.md  03.-The-Refraction-API-|-Tool-Calling.md  04.-Cost-Model-of-Edits.md  07.-Offline-Analysis.md  08.-Integration-with-LangGraph.md  09.-Integration-with-Mellea.md  10.-Integration-with-LangFlow.md
examples/: .env.example  codegen_getting_started.ipynb  codegen_long_response_example.json  json_processor.ipynb  langgraph_agent_example.py  langgraph_agent_example_streamlit.py  langgraph_agent_sparc_example.py  langgraph_agent_sparc_example_streamlit.py  policy_guard_example.ipynb  rag_repair.ipynb  refraction_getting_started.ipynb  silent_review.ipynb  spotlight.ipynb
tests/core/: README.md  test_auto_from_env.py  test_azure_openai.py  test_base.py  test_init.py  test_litellm_ollama.py  test_litellm_watsonx.py  test_llm_direct_config.py  test_output_parser.py  test_types.py  test_watsonx_ai.py
tests/policy_guard_middleware_toolkit/: policy_guard_test.py
tests/post_tool/: codegen_test.py  ragrepair_test.py  silent_review_json_data_test.py
tests/post_tool_reflection_toolkit/: codegen_test.py  ragrepair_test.py  silent_review_json_data_test.py
tests/post_tool_reflection_toolkit/rag_test_docs/: doc.html
tests/pre_llm/: spotlight_test.py
tests/pre_response/: policy_guard_test.py
tests/pre_tool/refraction/: test_refraction.py
tests/pre_tool/sparc/: semantic_validation_test.py  static_validation_test.py  units_conversion_test.py
tests/pre_tool/tool_guard/: test_tool_guard_calculator_policy.py
tests/pre_tool_guard_toolkit/: test_tool_guard_calculator_policy.py
tests/pre_tool_reflection_toolkit/refraction/: test_refraction.py
tests/pre_tool_reflection_toolkit/sparc/: semantic_validation_test.py  static_validation_test.py  units_conversion_test.py
tests/toolkit_core/: README.md  test_auto_from_env.py  test_azure_openai.py  test_base.py  test_init.py  test_litellm_ollama.py  test_litellm_watsonx.py  test_llm_direct_config.py  test_output_parser.py  test_types.py  test_watsonx_ai.py
(+207 files in other folders)
